# biner

./: .gitignore  CMakeLists.txt  README.md  biner.sln  biner.vcxproj  meson.build
include/: biner.hpp
src/: biner.cpp
